--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="/style.css">
-        <script charset="utf-8" src="/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script charset="utf-8" src="main.js"></script>
+        <script src="https://kit.fontawesome.com/3cd056553d.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+        <div id="profile">
+            <div id="profile_image"></div>
+            <div id="username">
+                <span style="display: block;">M.J van Wyk</span>
+                <a href="https://github.com/theoneatfault" target="_blank">@theoneatfault</a>
+            </div>
+        <div id="about">
+            <span style="display: block;"><i class="fas fa-link"></i><a href="https://theoneatfault.github.io" target="_blank">&nbsp;&nbsp;https://theoneatfault.github.io</a></span>
+            <span style="display: block;"><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp; George, WC</span>
+            <span style="display: none;"><i class="fas fa-user-tie"></i>N/A</span>
+            <div class="socials">
+                <span style="display: block;"><a href="https://www.linkedin.com/in/mj-van-wyk" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>
+            </div>
+        </div>
+        </div>
+        <div id="content">
+            <div id="work">
+                <h1>Hi, welcome.</h1>
+                <div class="projects" id="work_section">                    
+                    <a href="#" class="card" style="transform: translate(23px, 0px);">
+                        <section>
+                            <div class="section_title">section title</div>
+                            <div class="about_section">about section</div>
+                            <div class="bottom_section">bottom section</div>
+                        </section>
+                    </a>
+                    <a href="#" class="card" style="transform:translate(382px, 0px);">
+                        <section>
+                            <div class="section_title">section title</div>
+                            <div class="about_section">about section</div>
+                            <div class="bottom_section">bottom section</div>
+                        </section>
+                    </a>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
