Fiddled with it a bit more

--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/3cd056553d.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
-		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
+					
+					<!-- <div id="profile_image">						
+					</div>
+					<div id="name_and_github">
+						<span style="display: block;">M.J van Wyk</span>
+						<a href="https://github.com/theoneatfault" target="_blank">@theoneatfault</a>
+					</div> -->
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Get in touch</a></li>
-						</ul>
+							<li><a href="#one">Projects</a></li>
+						</ul>						
 					</nav>
+					<div id="socials">
+						<span style="display:inline-block; margin-right: 10px;"><a href="mailto:matthysjvw@gmail.com"><i class="fa-solid fa-envelope"></i></a></span>
+						<span style="display:inline-block; margin-right: 10px;"><a href="https://github.com/theoneatfault" target="_blank"><i class="fa-brands fa-github"></i></a></span>
+						<span style="display:inline-block;"><a href="https://www.linkedin.com/in/mj-van-wyk" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>						
+					</div>
 				</div>
 			</section>
 
@@ -121,7 +133,7 @@
 					</section> -->
 
 				<!-- Three -->
-					<section id="one" class="wrapper style1 fade-up">
+					<!-- <section id="one" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -177,7 +189,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 			</div>
 
