--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
 	<head>
-		<title>Welcome</title>
+		<title>Default Directory | MJ van Wyk</title>
+		<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
