The top idea in your mind.

--- a/index.html
+++ b/index.html
@@ -1,57 +1,131 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Default Directory | MJ van Wyk</title>
-		<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://kit.fontawesome.com/3cd056553d.js" crossorigin="anonymous"></script>
-	</head>
-	<body class="is-preload">
 
-			<section id="sidebar">
-				<div class="inner">
-					
-					<!-- <div id="profile_image">						
+<head>
+	<title>Default Directory | MJ van Wyk</title>
+	<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<script src="https://kit.fontawesome.com/3cd056553d.js" crossorigin="anonymous"></script>
+</head>
+
+<body class="is-preload">
+
+	<section id="sidebar">
+		<div class="inner">
+
+			<!-- <div id="profile_image">						
 					</div>
 					<div id="name_and_github">
 						<span style="display: block;">M.J van Wyk</span>
 						<a href="https://github.com/theoneatfault" target="_blank">@theoneatfault</a>
 					</div> -->
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Projects</a></li>
-						</ul>						
-					</nav>
-					<div id="socials">
-						<span style="display:inline-block; margin-right: 10px;"><a href="mailto:matthysjvw@gmail.com"><i class="fa-solid fa-envelope"></i></a></span>
-						<span style="display:inline-block; margin-right: 10px;"><a href="https://github.com/theoneatfault" target="_blank"><i class="fa-brands fa-github"></i></a></span>
-						<span style="display:inline-block;"><a href="https://www.linkedin.com/in/mj-van-wyk" target="_blank"><i class="fa-brands fa-linkedin"></i></a></span>						
-					</div>
-				</div>
-			</section>
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">Projects</a></li>
+					<li><a href="#top">"The Top Idea in Your Mind"</a></li>
+				</ul>
+			</nav>
+			<div id="socials">
+				<span style="display:inline-block; margin-right: 10px;"><a href="mailto:matthysjvw@gmail.com"><i
+							class="fa-solid fa-envelope"></i></a></span>
+				<span style="display:inline-block; margin-right: 10px;"><a href="https://github.com/theoneatfault"
+						target="_blank"><i class="fa-brands fa-github"></i></a></span>
+				<span style="display:inline-block;"><a href="https://www.linkedin.com/in/mj-van-wyk" target="_blank"><i
+							class="fa-brands fa-linkedin"></i></a></span>
+			</div>
+		</div>
+	</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Hi, welcome.</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Hi, welcome.</h1>
+				<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5
+						UP</a><br />
+					and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">Learn more</a></li>
+				</ul>
+			</div>
+		</section>
 
-				<!-- One -->
-					<!-- <section id="one" class="wrapper style2 spotlights">
+		<section id="top" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h1>The top idea in your mind. - <a href="http://www.paulgraham.com/top.html">Paul Graham</a></h1>
+				<p style="color:#fff;">
+					July 2010<br><br>I realized recently that what one thinks about in the shower in the
+					morning is more important than I'd thought.  I knew it was a good
+					time to have ideas.  Now I'd go further: now I'd say it's hard to
+					do a really good job on anything you don't think about in the shower.<br><br>Everyone who's worked on difficult problems is probably familiar
+					with the phenomenon of working hard to figure something out, failing,
+					and then suddenly seeing the answer a bit later while doing something
+					else. There's a kind of thinking you do without trying to.  I'm
+					increasingly convinced this type of thinking is not merely helpful
+					in solving hard problems, but necessary.  The tricky part is, you
+					can only control it indirectly.
+					<br><br>I think most people have one top idea in their mind at any given
+					time.  That's the idea their thoughts will drift toward when they're
+					allowed to drift freely.  And this idea will thus tend to get all
+					the benefit of that type of thinking, while others are starved of
+					it.  Which means it's a disaster to let the wrong idea become the
+					top one in your mind.<br><br>What made this clear to me was having an idea I didn't want as the
+					top one in my mind for two long stretches.<br><br>I'd noticed startups got way less done when they started raising
+					money, but it was not till we ourselves raised money that I understood
+					why.  The problem is not the actual time it takes to meet with
+					investors.  The problem is that once you start raising money, raising
+					money becomes the top idea in your mind.  That becomes what you
+					think about when you take a shower in the morning.  And that means
+					other questions aren't.<br><br>I'd hated raising money when I was running Viaweb, but I'd forgotten
+					why I hated it so much.  When we raised money for Y Combinator, I
+					remembered.  Money matters are particularly likely to become the
+					top idea in your mind.  The reason is that they have to be.  It's
+					hard to get money.  It's not the sort of thing that happens by
+					default.  It's not going to happen unless you let it become the
+					thing you think about in the shower.  And then you'll make little
+					progress on anything else you'd rather be working on.
+					<br><br>(I hear similar complaints from friends who are professors.  Professors
+					nowadays seem to have become professional fundraisers who do a
+					little research on the side.  It may be time to fix that.)<br><br>The reason this struck me so forcibly is that for most of the
+					preceding 10 years I'd been able to think about what I wanted.  So
+					the contrast when I couldn't was sharp.  But I don't think this
+					problem is unique to me, because just about every startup I've seen
+					grinds to a halt when they start raising money — or <a href="corpdev.html">talking
+					to acquirers</a>.<br><br>You can't directly control where your thoughts drift.  If you're
+					controlling them, they're not drifting.  But you can control them
+					indirectly, by controlling what situations you let yourself get
+					into.  That has been the lesson for me: be careful what you let
+					become critical to you.  Try to get yourself into situations where
+					the most urgent problems are ones you want to think about.<br><br>You don't have complete control, of course.  An emergency could
+					push other thoughts out of your head.  But barring emergencies you
+					have a good deal of indirect control over what becomes the top idea
+					in your mind.<br><br>I've found there are two types of thoughts especially worth
+					avoiding — thoughts like the Nile Perch in the way they push
+					out more interesting ideas.  One I've already mentioned: thoughts
+					about money. Getting money is almost by definition an attention
+					sink.
+					The other is disputes.  These too are engaging in the
+					wrong way: they have the same velcro-like shape as genuinely
+					interesting ideas, but without the substance.  So avoid disputes
+					if you want to get real work done.
+					<br><br>Even Newton fell into this trap.  After publishing his theory of
+					colors in 1672 he found himself distracted by disputes for years,
+					finally concluding that the only solution was to stop publishing:
+					</p>
+			</div>
+		</section>
+
+		<!-- One -->
+		<!-- <section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -90,8 +164,8 @@
 						</section>
 					</section> -->
 
-				<!-- Two -->
-					<!-- <section id="two" class="wrapper style3 fade-up">
+		<!-- Two -->
+		<!-- <section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -133,8 +207,8 @@
 						</div>
 					</section> -->
 
-				<!-- Three -->
-					<!-- <section id="one" class="wrapper style1 fade-up">
+		<!-- Three -->
+		<!-- <section id="one" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -192,25 +266,27 @@
 						</div>
 					</section> -->
 
-			</div>
+	</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
