--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 		<section id="top" class="wrapper style3 fade-up">
 			<div class="inner">
-				<h1>The top idea in your mind. - <a href="http://www.paulgraham.com/top.html">Paul Graham</a></h1>
+				<h1>The top idea in your mind. - <a href="http://www.paulgraham.com/top.html" target="_blank">Paul Graham</a></h1>
 				<p style="color:#fff;">
 					July 2010<br><br>I realized recently that what one thinks about in the shower in the
 					morning is more important than I'd thought.  I knew it was a good
