--- a/index.html
+++ b/index.html
@@ -120,6 +120,44 @@
 					<br><br>Even Newton fell into this trap.  After publishing his theory of
 					colors in 1672 he found himself distracted by disputes for years,
 					finally concluding that the only solution was to stop publishing:
+					<blockquote>
+					  I see I have made myself a slave to Philosophy, but if I get free
+					  of Mr Linus's business I will resolutely bid adew to it eternally,
+					  excepting what I do for my privat satisfaction or leave to come
+					  out after me.  For I see a man must either resolve to put out
+					  nothing new or become a slave to defend it.
+					<font color="#999999">[<a href="#f4n"><font color="#999999">4</font></a>]</font>
+					</blockquote>
+					
+Linus and his students at Liege were among the more tenacious
+critics.  Newton's biographer Westfall seems to feel he was
+overreacting:
+				<blockquote>
+  Recall that at the time he wrote, Newton's "slavery" consisted
+  of five replies to Liege, totalling fourteen printed pages, over
+  the course of a year.
+</blockquote>
+				
+I'm more sympathetic to Newton. The problem was not the 14 pages,
+but the pain of having this stupid controversy constantly reintroduced
+as the top idea in a mind that wanted so eagerly to think about
+				other things.</br></br>
+Turning the other cheek turns out to have selfish advantages.
+Someone who does you an injury hurts you twice: first by the injury
+itself, and second by taking up your time afterward thinking about
+it.  If you learn to ignore injuries you can at least avoid the
+second half.  I've found I can to some extent avoid thinking about
+nasty things people have done to me by telling myself: this doesn't
+deserve space in my head.  I'm always delighted to find I've forgotten
+the details of disputes, because that means I hadn't been thinking
+about them.  My wife thinks I'm more forgiving than she is, but my
+motives are purely selfish.</br></br>
+	I suspect a lot of people aren't sure what's the top idea in their
+mind at any given time.  I'm often mistaken about it.  I tend to
+think it's the idea I'd want to be the top one, rather than the one
+that is.  But it's easy to figure this out: just take a shower.
+What topic do your thoughts keep returning to?  If it's not what
+you want to be thinking about, you may want to change something.</br></br>
 					</p>
 			</div>
 		</section>
