--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Hi, welcome.</h1>
-				<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5
-						UP</a><br />
-					and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-				<ul class="actions">
-					<li><a href="#one" class="button scrolly">Learn more</a></li>
-				</ul>
+				<p>This is just some white space for now, until it's not.</p>
 			</div>
 		</section>
 
